# ai-audiobooks

./: .gitignore  .pre-commit-config.yaml  Justfile  README.md  conftest.py  pdf  pyproject.toml
.github/workflows/: ci.yaml  test.yaml
ai_audiobooks/: __main__.py  fix_text.py  git.py  llm.py  pandoc.py
examples/: MobyDick.txt  YellowWallpaper.epub  YellowWallpaper.txt
tests/: test_git.py  test_pandoc.py
